# minesweeper

./: .gitignore
backend/cpp/src/: main.cpp
backend/cpp/src/Enums/: GameState.hpp  MoveType.hpp
backend/cpp/src/Game/: Board.cpp  Board.hpp  Game.cpp  Game.hpp
backend/cpp/src/Tile/: TileContent.cpp  TileContent.hpp  UITile.cpp  UITile.hpp
backend/cpp/src/UI/: ConsoleInputHandler.cpp  ConsoleInputHandler.hpp  ConsoleOutputHandler.cpp  ConsoleOutputHandler.hpp  IOManager.cpp  InputHandler.hpp  OutputHandler.hpp
cpp/: CMakeLists.txt
cpp/src/Game/: Board.cpp  Board.hpp  Move.hpp
cpp/src/Tile/: Position.cpp  Position.hpp  TileContent.cpp  TileContent.hpp  UITile.cpp  UITile.hpp
cpp/src/UI/: ConsoleOutputHandler.cpp  ConsoleOutputHandler.hpp  IOManager.cpp
cpp/tests/: all_tests.cpp
js/: package-lock.json  package.json  server.js
js/public/: game.js  index.html  styles.css
src/: main.cpp
src/Enums/: TileState.hpp
src/Game/: Board.hpp  Game.cpp  Game.hpp
src/Tile/: Position.cpp  Position.hpp  Tile.hpp  TileContent.cpp  TileContent.hpp  UITile.cpp  UITile.hpp
src/UI/: IOManager.cpp  IOManager.hpp
ts/: README.md  package-lock.json  package.json
ts/src/app/: board.ts  boardstate.ts  components.tsx  definitions.tsx  game.ts  game.tsx  gamedata.ts  globals.css  layout.tsx  page.module.css  page.tsx  tile-generation.tsx  tile.ts  tile.tsx
